# pytest-override-env-var

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pytest_override_env_var.py  setup.cfg
.github/workflows/: lint.yml  test.yml
tests/: conftest.py  test_override.py  test_override_class.py  test_override_class_and_method.py  test_override_redefine.py  test_override_separate.py  test_override_two.py  test_undefined_var.py
