[bdist_wheel]
universal = 0

[check-manifest]
ignore =
    .pre-commit-config.yaml

[metadata]
name = pytest-override-env-var
version = 0.1.8
url = https://github.com/karlosss/pytest-override-env-var
description = Pytest mark to override a value of an environment variable.
author = Karel Jílek
author_email = los.karlosss@gmail.com
license = MIT
keywords = py.test pytest env environment variable

[options]
zip_safe = False
py_modules = pytest_override_env_var
python_requires = >= 3.7
install_requires =
    packaging >= 17.1
    pytest >= 5.3
    importlib-metadata>=1;python_version<"3.8"

[options.entry_points]
pytest11 =
    override_env_var = pytest_override_env_var
